--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,71 +1,64 @@
-<div class="margin">
-  <div class="row">
-    <div class="col d-flex justify-content-start">
-      <h2>Operational tasks</h2>
-    </div>
-    <div class="col d-flex justify-content-end">
-      <mat-form-field>
-        <mat-label>Showing entries for</mat-label>
-        <!-- Added static options for now -->
-        <mat-select [(ngModel)]="selectedEntry" value="All Workshops">
-          <mat-option value="All Workshops">All Workshops</mat-option>
-          <mat-option value="Option 2">Option 2</mat-option>
-          <mat-option value="Option 3">Option 3</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field style="margin-left: 20px">
-        <mat-label>Date range applied</mat-label>
-        <!-- Added static options for now -->
-        <mat-select [(ngModel)]="selectedDate" value="Today">
-          <mat-option value="Today">Today</mat-option>
-          <mat-option value="option 2">Option 2</mat-option>
-          <mat-option value="option 3">Option 3</mat-option>
-        </mat-select>
-      </mat-form-field>
+<mat-toolbar style="background-color: black">
+  <button
+    mat-icon-button
+    (click)="sidenav.toggle()"
+    matTooltip="Toggle Sidebar"
+  >
+    <mat-icon>menu</mat-icon>
+    <span> Menu</span>
+  </button>
+  <span class="toolbar-item-spacer"></span>
+
+  <!-- header content -->
+  <div class="header-content">
+    <div class="user-info">
+      <span class="username">Hello, Ayush</span>
+      <span class="logout-icon material-icons">logout</span>
+      <button class="logout-button">Logout</button>
     </div>
   </div>
-  <div class="grid-container" style="margin-top: 10px">
-    <div class="grid-item" *ngFor="let item of tasks">
-      <div class="card card-position">
-        <div
-          class="d-flex flex-column align-items-center justify-content-center"
+</mat-toolbar>
+
+<mat-sidenav-container>
+  <mat-sidenav
+    style="background-color: #272526"
+    #sidenav
+    mode="side"
+    [class.mat-elevation-z4]="true"
+    class="app-sidenav"
+  >
+    <mat-expansion-panel
+      [class.mat-elevation-z0]="true"
+      style="background-color: #272526"
+    >
+      <mat-expansion-panel-header class="indicator-color">
+        <mat-panel-title>
+          <mat-icon class="menu-item-color mat-icon-margin">inventory</mat-icon>
+          <h2 class="menu-item-color" style="margin-top: 18px">Inventory</h2>
+        </mat-panel-title>
+      </mat-expansion-panel-header>
+      <mat-nav-list>
+        <mat-list-item
+          routerLinkActive="active-link"
+          [routerLink]="['operations']"
         >
-          <div
-            class="card-head mb-3"
-            [style.background-color]="item.color + '30'"
-            [style.color]="item.color"
-          >
-            {{ item.header }}
-          </div>
-          <div
-            style="
-              margin-left: 10px;
-              margin-right: 10px;
-              margin-bottom: 20px;
-              margin-top: 20px;
-            "
-          >
-            <h4 [style.color]="item.color">{{ item.item }}</h4>
-          </div>
+          <mat-icon class="menu-item-color mat-icon-margin">inventory</mat-icon>
+          <span class="menu-item menu-item-color">Operations</span>
+        </mat-list-item>
+      </mat-nav-list>
+    </mat-expansion-panel>
 
-          <div *ngFor="let ele of item.subitems">
-            <div
-              class="subitem mb-2"
-              [style.border]="'2px solid' + item.color"
-              [style.color]="item.color"
-            >
-              {{ ele }}
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+    <mat-nav-list>
+      <mat-list-item [routerLink]="['home']" routerLinkActive="active-link">
+        <mat-icon class="menu-item-color mat-icon-margin">home</mat-icon>
+        <span class="menu-item menu-item-color">Home Page</span>
+      </mat-list-item>
+    </mat-nav-list>
+  </mat-sidenav>
 
-  <div class="mt-3">
-    <h5>User Activity</h5>
-    <div class="mt-3">
-      <app-table></app-table>
-    </div>
-  </div>
-</div>
+  <mat-sidenav-content>
+    <router-outlet></router-outlet>
+  </mat-sidenav-content>
+</mat-sidenav-container>
+
+<!-- <router-outlet></router-outlet> -->
