--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,8 @@
     (click)="sidenav.toggle()"
     matTooltip="Toggle Sidebar"
   >
-    <mat-icon>menu</mat-icon>
-    <span> Menu</span>
+    <mat-icon class="hamburger">menu</mat-icon>
+    <span style="margin-left: 23px"> Menu</span>
   </button>
   <span class="toolbar-item-spacer"></span>
 
@@ -60,5 +60,3 @@
     <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
-
-<!-- <router-outlet></router-outlet> -->
