--- a/src/app/components/operations/operations.component.html
+++ b/src/app/components/operations/operations.component.html
@@ -24,7 +24,7 @@
       </mat-form-field>
     </div>
   </div>
-  <div class="grid-container" style="margin-top: 10px">
+  <div class="grid-container">
     <div class="grid-item" *ngFor="let item of tasks">
       <div class="card card-position">
         <div
