--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,1 @@
-<h1 class="text-center">Dummy home page to show change in routing!</h1>
+<h1 class="text-center">Dummy page to display change in routing!</h1>
