--- a/src/app/components/operations/operations.component.html
+++ b/src/app/components/operations/operations.component.html
@@ -26,36 +26,10 @@
   </div>
   <div class="grid-container">
     <div class="grid-item" *ngFor="let item of tasks">
-      <div class="card card-position">
-        <div
-          class="d-flex flex-column align-items-center justify-content-center"
-        >
-          <div
-            class="card-head mb-3"
-            [style.background-color]="item.color + '30'"
-            [style.color]="item.color"
-          >
-            {{ item.header }}
-          </div>
-          <div class="operation-group">
-            <h4 [style.color]="item.color">{{ item.item }}</h4>
-          </div>
-
-          <div *ngFor="let ele of item.subitems">
-            <div
-              class="subitem mb-2"
-              [style.border]="'2px solid' + item.color"
-              [style.color]="item.color"
-              (click)="addTableItem(item.activityType)"
-            >
-              <div style="display: flex; justify-content: center">
-                <mat-icon style="margin-right: 5px">add</mat-icon>
-                <span class="operation">{{ ele }}</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      <app-task
+        [item]="item"
+        (tableItemAdded)="onTableItemAdded($event)"
+      ></app-task>
     </div>
   </div>
 
